# pn532_driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  licence
components/pn532/: CMakeLists.txt
components/pn532/include/: pn532.h  pn532_cmd.h  pn532_i2c.h  pn532_spi.h
components/pn532/src/: pn532.c  pn532_cmd.c  pn532_i2c.c  pn532_spi.c
docs/: api-reference.md  architecture.md  command-layer.md  core-driver.md  esp-idf-integration.md  i2c-transport.md
main/: CMakeLists.txt  pn532_driver.c
